--- a/CompOrgMipsSimulatorFinalProject/CompOrgMipsSimulatorFinalProject.vcxproj
+++ b/CompOrgMipsSimulatorFinalProject/CompOrgMipsSimulatorFinalProject.vcxproj
@@ -152,6 +152,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="CompOrgMipsSimulatorFinalProject.cpp" />
+    <ClCompile Include="p1.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="p1.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
