--- a/CompOrgMipsSimulatorFinalProject/CompOrgMipsSimulatorFinalProject.vcxproj
+++ b/CompOrgMipsSimulatorFinalProject/CompOrgMipsSimulatorFinalProject.vcxproj
@@ -159,9 +159,11 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="execution.h" />
-    <ClInclude Include="p1.h" />
     <ClInclude Include="parser.h" />
     <ClInclude Include="pipeline.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="..\..\..\..\Desktop\testy.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
