--- a/CompOrgMipsSimulatorFinalProject/CompOrgMipsSimulatorFinalProject.vcxproj.filters
+++ b/CompOrgMipsSimulatorFinalProject/CompOrgMipsSimulatorFinalProject.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="execution.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="hazard_parser.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="parser.h">
@@ -39,6 +42,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="execution.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="hazard_parser.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
